src/objects/sbxe1__sbx_TicketTemp__c.object
<CustomObject>
    <description>This is the temporary ticket object that holds tickets before they are matched with opportunity records after being inbound from Soapbox Events.</description>
    <fields>
        <fullName>sbxe1__sbx_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The campaign record related to this temporary ticket.</description>
        <inlineHelpText>The campaign record related to this temporary ticket.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Temporary Tickets</relationshipLabel>
        <relationshipName>Campaign_TicketTemp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_Email__c</fullName>
        <description>The email address related to this temporary ticket.</description>
        <inlineHelpText>The email address related to this temporary ticket.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_FirstName__c</fullName>
        <description>The first name related to this temporary ticket.</description>
        <inlineHelpText>The first name related to this temporary ticket.</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_HomePhone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_LastName__c</fullName>
        <description>This is the last name related to this temporary ticket.</description>
        <inlineHelpText>This is the last name related to this temporary ticket.</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MailingPostalCode__c</fullName>
        <label>Mailing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MailingState__c</fullName>
        <label>Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_SoapboxRegistrationOrderId__c</fullName>
        <description>This is the Soapbox Events registration order ID related to this temporary ticket.</description>
        <inlineHelpText>This is the Soapbox Events registration order ID related to this temporary ticket.</inlineHelpText>
        <label>Soapbox Registration Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_SoapboxTicketId__c</fullName>
        <description>This is the Soapbox ticket ID related to this temporary ticket.</description>
        <inlineHelpText>This is the Soapbox ticket ID related to this temporary ticket.</inlineHelpText>
        <label>Soapbox Ticket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_TicketPrice__c</fullName>
        <description>This is the ticket price related to this temporary ticket.</description>
        <inlineHelpText>This is the ticket price related to this temporary ticket.</inlineHelpText>
        <label>Ticket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_TicketType__c</fullName>
        <description>This is the ticket type related to this temporary ticket.</description>
        <inlineHelpText>This is the ticket type related to this temporary ticket.</inlineHelpText>
        <label>Ticket Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>Ticket Temp</label>
    <nameField>
        <label>Ticket Temp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>